--- a/cart.html
+++ b/cart.html
@@ -6,18 +6,123 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Untitled</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat&amp;display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700&amp;display=swap">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
+    <link rel="stylesheet" href="assets/fonts/simple-line-icons.min.css">
     <link rel="stylesheet" href="assets/css/Floating-Button.css">
     <link rel="stylesheet" href="assets/css/Footer-Basic.css">
     <link rel="stylesheet" href="assets/css/Header-Blue.css">
     <link rel="stylesheet" href="assets/css/Map-Clean.css">
+    <link rel="stylesheet" href="assets/css/Social-Icons.css">
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
 <body>
+    <header class="header-blue">
+        <nav class="navbar navbar-dark navbar-expand-md navigation-clean-search">
+            <div class="container-fluid">
+                <div class="col-2"><img class="logo" src="assets/img/Capture.png" width="80%"></div><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+                <div class="collapse navbar-collapse" id="navcol-1">
+                    <form class="d-flex me-auto navbar-form" target="_self">
+                        <div class="d-flex align-items-center"><label class="form-label d-flex mb-0" for="search-field"></label></div>
+                    </form>
+                    <ul class="navbar-nav">
+                        <li class="nav-item"><a class="nav-link d-flex justify-content-end" href="index.html">Home</a></li>
+                        <li class="nav-item"><a class="nav-link d-flex justify-content-end" href="catalog.html">Shop</a></li>
+                        <li class="nav-item"><a class="nav-link d-flex justify-content-end" href="testimonial.html">Testimonial</a></li>
+                        <li class="nav-item"><a class="nav-link d-flex justify-content-end" href="login.html">Login</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <div class="container"><a href="#" class="float">
+<i class="fa fa-phone my-float"></i>
+</a>
+</div>
+    </header>
+    <main class="page shopping-cart-page">
+        <section class="clean-block clean-cart dark">
+            <div class="container">
+                <div class="block-heading">
+                    <h2 class="text-center text-dark">Shopping Cart</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
+                </div>
+                <div class="content">
+                    <div class="row g-0">
+                        <div class="col-md-12 col-lg-8">
+                            <div class="items">
+                                <div class="product">
+                                    <div class="row justify-content-center align-items-center">
+                                        <div class="col-md-3">
+                                            <div class="product-image"><img class="img-fluid d-block mx-auto image" src="assets/img/BKLEEN-PPT-Credential-2021-17.pdf_0000_Layer-2.png"></div>
+                                        </div>
+                                        <div class="col-md-5 product-info"><a class="product-name" href="#">Lorem Ipsum dolor</a>
+                                            <div class="product-specs">
+                                                <div><span>Display:&nbsp;</span><span class="value">5 inch</span></div>
+                                                <div><span>RAM:&nbsp;</span><span class="value">4GB</span></div>
+                                                <div><span>Memory:&nbsp;</span><span class="value">32GB</span></div>
+                                            </div>
+                                        </div>
+                                        <div class="col-6 col-md-2 quantity"><label class="form-label d-none d-md-block" for="quantity">Quantity</label><input type="number" id="number-1" class="form-control quantity-input" value="1"></div>
+                                        <div class="col-6 col-md-2 price"><span>$120</span></div>
+                                    </div>
+                                </div>
+                                <div class="product">
+                                    <div class="row justify-content-center align-items-center">
+                                        <div class="col-md-3">
+                                            <div class="product-image"><img class="img-fluid d-block mx-auto image" src="assets/img/BKLEEN-PPT-Credential-2021-17.pdf_0000_Layer-2.png"></div>
+                                        </div>
+                                        <div class="col-md-5 product-info"><a class="product-name" href="#">Lorem Ipsum dolor</a>
+                                            <div class="product-specs">
+                                                <div><span>Display:&nbsp;</span><span class="value">5 inch</span></div>
+                                                <div><span>RAM:&nbsp;</span><span class="value">4GB</span></div>
+                                                <div><span>Memory:&nbsp;</span><span class="value">32GB</span></div>
+                                            </div>
+                                        </div>
+                                        <div class="col-6 col-md-2 quantity"><label class="form-label d-none d-md-block" for="quantity">Quantity</label><input type="number" id="number-2" class="form-control quantity-input" value="1"></div>
+                                        <div class="col-6 col-md-2 price"><span>$120</span></div>
+                                    </div>
+                                </div>
+                                <div class="product">
+                                    <div class="row justify-content-center align-items-center">
+                                        <div class="col-md-3">
+                                            <div class="product-image"><img class="img-fluid d-block mx-auto image" src="assets/img/BKLEEN-PPT-Credential-2021-17.pdf_0000_Layer-2.png"></div>
+                                        </div>
+                                        <div class="col-md-5 product-info"><a class="product-name" href="#">Lorem Ipsum dolor</a>
+                                            <div class="product-specs">
+                                                <div><span>Display:&nbsp;</span><span class="value">5 inch</span></div>
+                                                <div><span>RAM:&nbsp;</span><span class="value">4GB</span></div>
+                                                <div><span>Memory:&nbsp;</span><span class="value">32GB</span></div>
+                                            </div>
+                                        </div>
+                                        <div class="col-6 col-md-2 quantity"><label class="form-label d-none d-md-block" for="quantity">Quantity</label><input type="number" id="number-3" class="form-control quantity-input" value="1"></div>
+                                        <div class="col-6 col-md-2 price"><span>$120</span></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-8">
+                            <div class="summary">
+                                <h3>Summary</h3>
+                                <h4><span class="text">Subtotal</span><span class="price">$360</span></h4>
+                                <h4><span class="text">Discount</span><span class="price">$0</span></h4>
+                                <h4><span class="text">Shipping</span><span class="price">$0</span></h4>
+                                <h4><span class="text">Total</span><span class="price">$360</span></h4><button class="btn btn-primary btn-lg d-block w-100" type="button">Checkout</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer class="footer-basic">
+        <div class="social-icons"><i class="fa fa-instagram"></i><a href="#"></a><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"></a><a href="#"><i class="icon ion-social-youtube"></i></a></div>
+        <p class="copyright">BKLEEN © 2021</p>
+    </footer>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/vanilla-zoom.js"></script>
 </body>
 
 </html>
