--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Untitled</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat&amp;display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700&amp;display=swap">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
+    <link rel="stylesheet" href="assets/fonts/simple-line-icons.min.css">
     <link rel="stylesheet" href="assets/css/Floating-Button.css">
     <link rel="stylesheet" href="assets/css/Footer-Basic.css">
     <link rel="stylesheet" href="assets/css/Header-Blue.css">
     <link rel="stylesheet" href="assets/css/Map-Clean.css">
+    <link rel="stylesheet" href="assets/css/Social-Icons.css">
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
@@ -26,13 +29,14 @@
                         <div class="d-flex align-items-center"><label class="form-label d-flex mb-0" for="search-field"></label></div>
                     </form>
                     <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link d-flex justify-content-end" href="#">Home</a></li>
-                        <li class="nav-item"><a class="nav-link d-flex justify-content-end" href="#">Shop</a></li>
-                        <li class="nav-item"><a class="nav-link d-flex justify-content-end" href="#">Login</a></li>
+                        <li class="nav-item"><a class="nav-link d-flex justify-content-end" href="index.html">Home</a></li>
+                        <li class="nav-item"><a class="nav-link d-flex justify-content-end" href="catalog.html">Shop</a></li>
+                        <li class="nav-item"><a class="nav-link d-flex justify-content-end" href="testimonial.html">Testimonial</a></li>
+                        <li class="nav-item"><a class="nav-link d-flex justify-content-end" href="login.html">Login</a></li>
                     </ul>
                 </div>
             </div>
-        </nav><img class="img-fluid" src="https://images.tokopedia.net/img/cache/750/VCeHif/2021/2/18/6b694fa6-212f-4bf1-9b8d-d2d42f97c741.jpg.webp?ect=4g">
+        </nav><img class="d-xl-flex justify-content-xl-center img-fluid" src="https://images.tokopedia.net/img/cache/750/VCeHif/2021/2/18/6b694fa6-212f-4bf1-9b8d-d2d42f97c741.jpg.webp?ect=4g">
         <div class="container d-flex justify-content-center btn">
             <div><button class="btn btn-light btn-lg d-flex align-self-center action-button" type="button">Buy now</button></div>
         </div>
@@ -42,18 +46,18 @@
                     <h2 class="text-center text-light d-xl-flex justify-content-xl-start a">TERSERTIFIKASI KEMENKES DAN UJI LAB</h2>
                 </div>
                 <div class="col">
-                    <h2 class="text-center text-light d-lg-flex justify-content-xl-start a">NUMBER 1 SELLING DISINFECTANT<br><br></h2>
-                    <div class="shop"><img class="d-xl-flex justify-content-xl-center shop" src="assets/img/kisspng-shopee-indonesia-adidas-logo-gadget-affair-pte-ltd-monogram-5abc68d1437382.2477929315222970412763.png"><img class="d-xl-flex justify-content-xl-center shop" src="assets/img/pngfind.com-krishna-vector-png-2708372.png"></div>
+                    <h2 class="text-center text-light d-lg-flex justify-content-xl-start a">NUMBER 1 SELLING DISINFECTANT<br></h2>
+                    <div class="shop"><img class="d-xl-flex justify-content-xl-center shop" src="assets/img/kisspng-shopee-indonesia-adidas-logo-gadget-affair-pte-ltd-monogram-5abc68d1437382.2477929315222970412763.png" href="shopee.com"><img class="d-xl-flex justify-content-xl-center shop" src="assets/img/pngfind.com-krishna-vector-png-2708372.png" href="tokopedia.com"></div>
                 </div>
             </div>
         </div>
-        <div class="container"><a href="#" class="float">
+        <div class="container"><a href="whatsapp.com" class="float">
 <i class="fa fa-phone my-float"></i>
 </a>
 </div>
         <div class="container d-flex">
             <div class="row">
-                <div class="col"><img class="lab" src="assets/img/certif.jpg"></div>
+                <div class="col-5 col-xl-5"><img class="lab" src="assets/img/certif.jpg"></div>
                 <div class="col"><img class="lab" src="assets/img/lab.jpg"></div>
             </div>
         </div>
@@ -73,10 +77,11 @@
                 <p></p>
             </div>
         </section>
-        <div class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a></div>
+        <div class="social-icons"><a href="#"><i class="icon ion-social-instagram" href="instagram.com"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"></a><a href="#"><i class="icon ion-social-youtube" href="youtube.com"></i></a></div>
         <p class="copyright">BKLEEN © 2021</p>
     </footer>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/vanilla-zoom.js"></script>
 </body>
 
 </html>
