--- a/testimonial.html
+++ b/testimonial.html
@@ -6,18 +6,59 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Untitled</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat&amp;display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700&amp;display=swap">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
+    <link rel="stylesheet" href="assets/fonts/simple-line-icons.min.css">
     <link rel="stylesheet" href="assets/css/Floating-Button.css">
     <link rel="stylesheet" href="assets/css/Footer-Basic.css">
     <link rel="stylesheet" href="assets/css/Header-Blue.css">
     <link rel="stylesheet" href="assets/css/Map-Clean.css">
+    <link rel="stylesheet" href="assets/css/Social-Icons.css">
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
 <body>
+    <header class="header-blue">
+        <nav class="navbar navbar-dark navbar-expand-md navigation-clean-search">
+            <div class="container-fluid">
+                <div class="col-2"><img class="logo" src="assets/img/Capture.png" width="80%"></div><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+                <div class="collapse navbar-collapse" id="navcol-1">
+                    <form class="d-flex me-auto navbar-form" target="_self">
+                        <div class="d-flex align-items-center"><label class="form-label d-flex mb-0" for="search-field"></label></div>
+                    </form>
+                    <ul class="navbar-nav">
+                        <li class="nav-item"><a class="nav-link d-flex justify-content-end" href="index.html">Home</a></li>
+                        <li class="nav-item"><a class="nav-link d-flex justify-content-end" href="catalog.html">Shop</a></li>
+                        <li class="nav-item"><a class="nav-link d-flex justify-content-end" href="testimonial.html">Testimonial</a></li>
+                        <li class="nav-item"><a class="nav-link d-flex justify-content-end" href="login.html">Login</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <div class="container"><a href="#" class="float">
+<i class="fa fa-phone my-float"></i>
+</a>
+</div>
+    </header>
+    <main>
+        <div class="container d-flex">
+            <div class="row">
+                <div class="col-6 col-xl-5"><img class="lab" src="assets/img/certif.jpg"></div>
+                <div class="col d-xl-flex justify-content-xl-center e"><img class="lab" src="assets/img/lab.jpg"></div>
+            </div>
+        </div>
+        <div class="container">
+            <h1 class="text-center B">PARTNERS</h1>
+        </div>
+    </main><img class="partner" src="assets/img/BKLEEN%20PPT%20Credential%202021-13.png">
+    <footer class="footer-basic">
+        <div class="social-icons"><i class="fa fa-instagram"></i><a href="#"></a><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"></a><a href="#"><i class="icon ion-social-youtube"></i></a></div>
+        <p class="copyright">BKLEEN © 2021</p>
+    </footer>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/vanilla-zoom.js"></script>
 </body>
 
 </html>
