--- a/catalog.html
+++ b/catalog.html
@@ -32,6 +32,7 @@
                         <li class="nav-item"><a class="nav-link d-flex justify-content-end" href="index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link d-flex justify-content-end" href="catalog.html">Shop</a></li>
                         <li class="nav-item"><a class="nav-link d-flex justify-content-end" href="testimonial.html">Testimonial</a></li>
+                        <li class="nav-item"><a class="nav-link d-flex justify-content-end" href="cart.html">Cart</a></li>
                         <li class="nav-item"><a class="nav-link d-flex justify-content-end" href="login.html">Login</a></li>
                     </ul>
                 </div>
@@ -105,7 +106,43 @@
                                     <div class="col-12 col-md-6 col-lg-4 f">
                                         <div class="clean-product-item">
                                             <div class="image"><a href="#"><img class="img-fluid d-block mx-auto" src="assets/img/BKLEEN-PPT-Credential-2021-17.pdf_0000_Layer-2.png"></a></div>
-                                            <div class="product-name"><a href="#">Lorem ipsum dolor sit amet</a></div>
+                                            <div class="product-name"><a href="product.html">Lorem ipsum dolor sit amet</a></div>
+                                            <div class="about">
+                                                <div class="rating"><img src="assets/img/star.svg"><img src="assets/img/star.svg"><img src="assets/img/star.svg"><img src="assets/img/star-half-empty.svg"><img src="assets/img/star-empty.svg"></div>
+                                                <div class="price">
+                                                    <h3>$100</h3>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-12 col-md-6 col-lg-4 f">
+                                        <div class="clean-product-item">
+                                            <div class="image"><a href="#"><img class="img-fluid d-block mx-auto" src="assets/img/BKLEEN-PPT-Credential-2021-17.pdf_0000_Layer-2.png"></a></div>
+                                            <div class="product-name"><a href="product.html">Lorem ipsum dolor sit amet</a></div>
+                                            <div class="about">
+                                                <div class="rating"><img src="assets/img/star.svg"><img src="assets/img/star.svg"><img src="assets/img/star.svg"><img src="assets/img/star-half-empty.svg"><img src="assets/img/star-empty.svg"></div>
+                                                <div class="price">
+                                                    <h3>$100</h3>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-12 col-md-6 col-lg-4 f">
+                                        <div class="clean-product-item">
+                                            <div class="image"><a href="#"><img class="img-fluid d-block mx-auto" src="assets/img/BKLEEN-PPT-Credential-2021-17.pdf_0000_Layer-2.png"></a></div>
+                                            <div class="product-name"><a href="product.html">Lorem ipsum dolor sit amet</a></div>
+                                            <div class="about">
+                                                <div class="rating"><img src="assets/img/star.svg"><img src="assets/img/star.svg"><img src="assets/img/star.svg"><img src="assets/img/star-half-empty.svg"><img src="assets/img/star-empty.svg"></div>
+                                                <div class="price">
+                                                    <h3>$100</h3>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-12 col-md-6 col-lg-4 f">
+                                        <div class="clean-product-item">
+                                            <div class="image"><a href="#"><img class="img-fluid d-block mx-auto" src="assets/img/BKLEEN-PPT-Credential-2021-17.pdf_0000_Layer-2.png"></a></div>
+                                            <div class="product-name"><a href="product.html">Lorem ipsum dolor sit amet</a></div>
                                             <div class="about">
                                                 <div class="rating"><img src="assets/img/star.svg"><img src="assets/img/star.svg"><img src="assets/img/star.svg"><img src="assets/img/star-half-empty.svg"><img src="assets/img/star-empty.svg"></div>
                                                 <div class="price">
@@ -129,43 +166,7 @@
                                     <div class="col-12 col-md-6 col-lg-4 f">
                                         <div class="clean-product-item">
                                             <div class="image"><a href="#"><img class="img-fluid d-block mx-auto" src="assets/img/BKLEEN-PPT-Credential-2021-17.pdf_0000_Layer-2.png"></a></div>
-                                            <div class="product-name"><a href="#">Lorem ipsum dolor sit amet</a></div>
-                                            <div class="about">
-                                                <div class="rating"><img src="assets/img/star.svg"><img src="assets/img/star.svg"><img src="assets/img/star.svg"><img src="assets/img/star-half-empty.svg"><img src="assets/img/star-empty.svg"></div>
-                                                <div class="price">
-                                                    <h3>$100</h3>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-12 col-md-6 col-lg-4 f">
-                                        <div class="clean-product-item">
-                                            <div class="image"><a href="#"><img class="img-fluid d-block mx-auto" src="assets/img/BKLEEN-PPT-Credential-2021-17.pdf_0000_Layer-2.png"></a></div>
-                                            <div class="product-name"><a href="#">Lorem ipsum dolor sit amet</a></div>
-                                            <div class="about">
-                                                <div class="rating"><img src="assets/img/star.svg"><img src="assets/img/star.svg"><img src="assets/img/star.svg"><img src="assets/img/star-half-empty.svg"><img src="assets/img/star-empty.svg"></div>
-                                                <div class="price">
-                                                    <h3>$100</h3>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-12 col-md-6 col-lg-4 f">
-                                        <div class="clean-product-item">
-                                            <div class="image"><a href="#"><img class="img-fluid d-block mx-auto" src="assets/img/BKLEEN-PPT-Credential-2021-17.pdf_0000_Layer-2.png"></a></div>
-                                            <div class="product-name"><a href="#">Lorem ipsum dolor sit amet</a></div>
-                                            <div class="about">
-                                                <div class="rating"><img src="assets/img/star.svg"><img src="assets/img/star.svg"><img src="assets/img/star.svg"><img src="assets/img/star-half-empty.svg"><img src="assets/img/star-empty.svg"></div>
-                                                <div class="price">
-                                                    <h3>$100</h3>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-12 col-md-6 col-lg-4 f">
-                                        <div class="clean-product-item">
-                                            <div class="image"><a href="#"><img class="img-fluid d-block mx-auto" src="assets/img/BKLEEN-PPT-Credential-2021-17.pdf_0000_Layer-2.png"></a></div>
-                                            <div class="product-name"><a href="#">Lorem ipsum dolor sit amet</a></div>
+                                            <div class="product-name"><a href="product.html">Lorem ipsum dolor sit amet</a></div>
                                             <div class="about">
                                                 <div class="rating"><img src="assets/img/star.svg"><img src="assets/img/star.svg"><img src="assets/img/star.svg"><img src="assets/img/star-half-empty.svg"><img src="assets/img/star-empty.svg"></div>
                                                 <div class="price">
@@ -201,7 +202,7 @@
                                     <div class="col-12 col-md-6 col-lg-4 f">
                                         <div class="clean-product-item">
                                             <div class="image"><a href="#"><img class="img-fluid d-block mx-auto" src="assets/img/BKLEEN-PPT-Credential-2021-17.pdf_0000_Layer-2.png"></a><a href="#"></a></div>
-                                            <div class="product-name"><a href="#">Lorem ipsum dolor sit amet</a></div>
+                                            <div class="product-name"><a href="product.html">Lorem ipsum dolor sit amet</a></div>
                                             <div class="about">
                                                 <div class="rating"><img src="assets/img/star.svg"><img src="assets/img/star.svg"><img src="assets/img/star.svg"><img src="assets/img/star-half-empty.svg"><img src="assets/img/star-empty.svg"></div>
                                                 <div class="price">
