--- a/login.html
+++ b/login.html
@@ -32,6 +32,7 @@
                         <li class="nav-item"><a class="nav-link d-flex justify-content-end" href="index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link d-flex justify-content-end" href="catalog.html">Shop</a></li>
                         <li class="nav-item"><a class="nav-link d-flex justify-content-end" href="testimonial.html">Testimonial</a></li>
+                        <li class="nav-item"><a class="nav-link d-flex justify-content-end" href="cart.html">Cart</a></li>
                         <li class="nav-item"><a class="nav-link d-flex justify-content-end" href="login.html">Login</a></li>
                     </ul>
                 </div>
@@ -53,7 +54,7 @@
                 </div>
                 <div class="loginbtn1 item"><button class="btn btn-primary regis" type="submit">Log In</button></div>
                 <div class="loginbtn item"><button class="btn btn-primary regis" type="submit">Register</button></div>
-            </form>
+            </form><a class="link-dark link" href="register.html">Register</a>
         </div>
     </header>
     <footer class="footer-basic">
