--- a/product.html
+++ b/product.html
@@ -32,6 +32,7 @@
                         <li class="nav-item"><a class="nav-link d-flex justify-content-end" href="index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link d-flex justify-content-end" href="catalog.html">Shop</a></li>
                         <li class="nav-item"><a class="nav-link d-flex justify-content-end" href="testimonial.html">Testimonial</a></li>
+                        <li class="nav-item"><a class="nav-link d-flex justify-content-end" href="cart.html">Cart</a></li>
                         <li class="nav-item"><a class="nav-link d-flex justify-content-end" href="login.html">Login</a></li>
                     </ul>
                 </div>
