--- a/index.html
+++ b/index.html
@@ -1,88 +1,33 @@
-<!DOCTYPE html>
-<html lang="en" title="Bkleen">
+<!DOCTYPE html><html lang="en" title="Bkleen"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no"><title>Untitled</title><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat&amp;display=swap"><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700&amp;display=swap"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css"><link rel="stylesheet" href="/assets/css/styles.min.css?h=c30321b0d47ce7f0e060161f56b10271"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.4.8/swiper-bundle.min.css"></head><body><!-- Start: Header Blue --><header class="header-blue"><nav class="navbar navbar-dark navbar-expand-md navigation-clean-search"><div class="container-fluid"><div class="col-2"><img class="logo" src="/assets/img/logo.jpeg?h=5400f19b025a91148a1c3882587bd96b"></div><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden" style="background: #ffffff;">Toggle navigation</span><i class="fa fa-navicon" style="color: rgb(0,0,0);"></i></button><div class="collapse navbar-collapse" id="navcol-1"><form class="d-flex me-auto navbar-form" target="_self"><div class="d-flex align-items-center"><label class="form-label d-flex mb-0" for="search-field"></label></div></form><ul class="navbar-nav"><li class="nav-item"><a class="nav-link d-flex justify-content-end text" href="/index.html" style="color: rgb(0,0,0);font-weight: bold;font-family: Montserrat, sans-serif;">Home</a></li><li class="nav-item"><a class="nav-link d-flex justify-content-end text" href="/catalog.html" style="font-family: Montserrat, sans-serif;font-weight: bold;color: rgb(0,0,0);">Product</a></li><li class="nav-item"><a class="nav-link d-flex justify-content-end text" href="/testimonial.html" style="color: rgb(0,0,0);font-family: Montserrat, sans-serif;font-weight: bold;">News</a></li><li class="nav-item"><a class="nav-link d-flex justify-content-end text" href="" style="font-family: Montserrat, sans-serif;font-weight: bold;color: rgb(0,0,0);">About Us</a></li><li class="nav-item"><a class="nav-link d-flex justify-content-end text" href="" style="font-family: Montserrat, sans-serif;color: rgb(0,0,0);font-weight: bold;">Contact</a></li></ul></div></div></nav><!-- Start: Carousel_Image_Slider --><div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="/assets/img/WhatsApp%20Image%202021-07-28%20at%2015.59.31.jpeg?h=486e0f8da95ce1f63cf6ac601eafa972" alt="First slide" style="height: auto; width: auto;">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="/assets/img/WhatsApp%20Image%202021-07-28%20at%2015.59.32.jpeg?h=ecd3cd3cea625885e003632b182274af" alt="Second slide" style="height: auto; width: auto;">        
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="/assets/img/WhatsApp%20Image%202021-07-28%20at%2015.59.32%20(1).jpeg?h=c3af6f6128e0eae18454eb0553764d95" alt="Third slide" style="height: auto; width: auto;">        
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Untitled</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat&amp;display=swap">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700&amp;display=swap">
-    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
-    <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
-    <link rel="stylesheet" href="assets/fonts/simple-line-icons.min.css">
-    <link rel="stylesheet" href="assets/css/Floating-Button.css">
-    <link rel="stylesheet" href="assets/css/Footer-Basic.css">
-    <link rel="stylesheet" href="assets/css/Header-Blue.css">
-    <link rel="stylesheet" href="assets/css/Map-Clean.css">
-    <link rel="stylesheet" href="assets/css/Social-Icons.css">
-    <link rel="stylesheet" href="assets/css/styles.css">
-</head>
-
-<body>
-    <header class="header-blue">
-        <nav class="navbar navbar-dark navbar-expand-md navigation-clean-search">
-            <div class="container-fluid">
-                <div class="col-2"><img class="logo" src="assets/img/Capture.png" width="80%"></div><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse" id="navcol-1">
-                    <form class="d-flex me-auto navbar-form" target="_self">
-                        <div class="d-flex align-items-center"><label class="form-label d-flex mb-0" for="search-field"></label></div>
-                    </form>
-                    <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link d-flex justify-content-end" href="index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link d-flex justify-content-end" href="catalog.html">Shop</a></li>
-                        <li class="nav-item"><a class="nav-link d-flex justify-content-end" href="testimonial.html">Testimonial</a></li>
-                        <li class="nav-item"><a class="nav-link d-flex justify-content-end" href="cart.html">Cart</a></li>
-                        <li class="nav-item"><a class="nav-link d-flex justify-content-end" href="login.html">Login</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav><img class="d-xl-flex justify-content-xl-center img-fluid" src="https://images.tokopedia.net/img/cache/750/VCeHif/2021/2/18/6b694fa6-212f-4bf1-9b8d-d2d42f97c741.jpg.webp?ect=4g">
-        <div class="container d-flex justify-content-center btn">
-            <div><button class="btn btn-light btn-lg d-flex align-self-center action-button" type="button">Buy now</button></div>
-        </div>
-        <div class="container d-flex">
-            <div class="row">
-                <div class="col">
-                    <h2 class="text-center text-light d-xl-flex justify-content-xl-start a">TERSERTIFIKASI KEMENKES DAN UJI LAB</h2>
-                </div>
-                <div class="col">
-                    <h2 class="text-center text-light d-lg-flex justify-content-xl-start a">NUMBER 1 SELLING DISINFECTANT<br></h2>
-                    <div class="shop"><img class="d-xl-flex justify-content-xl-center shop" src="assets/img/kisspng-shopee-indonesia-adidas-logo-gadget-affair-pte-ltd-monogram-5abc68d1437382.2477929315222970412763.png" href="shopee.com"><img class="d-xl-flex justify-content-xl-center shop" src="assets/img/pngfind.com-krishna-vector-png-2708372.png" href="tokopedia.com"></div>
-                </div>
-            </div>
-        </div>
-        <div class="container"><a href="whatsapp.com" class="float">
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script><!-- End: Carousel_Image_Slider --><div class="container d-flex justify-content-center btn"><div></div></div><div class="container"><!-- Start: Floating Button --><a href="whatsapp.com" class="float">
 <i class="fa fa-phone my-float"></i>
 </a>
-</div>
-        <div class="container d-flex">
-            <div class="row">
-                <div class="col-5 col-xl-5"><img class="lab" src="assets/img/certif.jpg"></div>
-                <div class="col"><img class="lab" src="assets/img/lab.jpg"></div>
-            </div>
-        </div>
-        <div class="container">
-            <h1 class="text-center B">PARTNERS</h1>
-        </div><img class="partner" src="assets/img/BKLEEN%20PPT%20Credential%202021-13.png">
-    </header>
-    <footer class="footer-basic">
-        <section class="text-center map-clean">
-            <div class="container">
-                <div class="intro">
-                    <h2 class="text-center">Location </h2>
-                    <p class="text-center">Alamat: Ruko CBd Bidex, Unit B-23,<br>RT.1/RW.4, Lengkong Gudang,<br>Kec. Serpong, Kota Tangerang Selatan, Banten 15311<br>Telepon: 0811-6968-080<br></p>
-                </div>
-            </div><iframe allowfullscreen="" frameborder="0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCmzGqwaI0fuVMJR0urcFAGKeBwj7XBmq4&amp;q=Alamat%3A+Ruko+CBd+Bidex%2C+Unit+B-23%2C+RT.1%2FRW.4%2C+Lengkong+Gudang%2C+Kec.+Serpong%2C+Kota+Tangerang+Selatan%2C+Banten+15311+&amp;zoom=15" width="75%" height="300"></iframe>
-            <div class="col">
-                <p></p>
-            </div>
-        </section>
-        <div class="social-icons"><a href="#"><i class="icon ion-social-instagram" href="instagram.com"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"></a><a href="#"><i class="icon ion-social-youtube" href="youtube.com"></i></a></div>
-        <p class="copyright">BKLEEN © 2021</p>
-    </footer>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/vanilla-zoom.js"></script>
-</body>
-
-</html>
+<!-- End: Floating Button --></div><div class="container d-flex"><img class="lab" src="/assets/img/certif.jpg?h=a79996a9cc1977548b395e3dcbfc232e"><img class="lab" src="/assets/img/lab.jpg?h=56a30d72d71eebe71fb78e4513a4cd6d"></div><div class="container"><h1 class="text-center B" style="font-family: Montserrat, sans-serif;font-weight: bold;color: #000000;">PARTNERS</h1></div><img class="partner" src="/assets/img/BKLEEN%20PPT%20Credential%202021-13.png?h=3200a813eafb170f57bfa4407867b8d8"></header><!-- End: Header Blue --><!-- Start: Footer Basic --><footer class="footer-basic"><!-- Start: Map Clean --><section class="text-center map-clean"><div class="container"><!-- Start: Intro --><div class="intro"><h2 class="text-center">Location </h2><p class="text-center">Alamat: Ruko CBd Bidex, Unit B-23,<br>RT.1/RW.4, Lengkong Gudang,<br>Kec. Serpong, Kota Tangerang Selatan, Banten 15311<br>Telepon: 0811-6968-080<br></p></div><!-- End: Intro --></div><iframe allowfullscreen="" frameborder="0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCmzGqwaI0fuVMJR0urcFAGKeBwj7XBmq4&amp;q=Alamat%3A+Ruko+CBd+Bidex%2C+Unit+B-23%2C+RT.1%2FRW.4%2C+Lengkong+Gudang%2C+Kec.+Serpong%2C+Kota+Tangerang+Selatan%2C+Banten+15311+&amp;zoom=15" class="map" width="50%" height="300"></iframe><div class="col"><p></p></div><div class="col"><h1 style="font-weight: bold;">Our Official Store</h1><div class="shop"><img class="d-xl-flex justify-content-xl-center shop" src="/assets/img/pngfind.com-krishna-vector-png-2708372.png?h=00a87a72c3f68cf8d6db9be368643511" href="tokopedia.com"><img class="d-xl-flex justify-content-xl-center shop" src="/assets/img/kisspng-shopee-indonesia-adidas-logo-gadget-affair-pte-ltd-monogram-5abc68d1437382.2477929315222970412763.png?h=d317faf388e236b20d32b61b7fca8267" href="shopee.com"><img class="d-xl-flex justify-content-xl-center shop" src="/assets/img/blibli.png?h=07dffd311ddd3b4a6447d931fe36f9aa" href="shopee.com"></div></div></section><!-- End: Map Clean --><!-- Start: Social Icons --><div class="social-icons"><h1 style="font-weight: bold;">Our Social Media</h1><a href="#"><i class="icon ion-social-instagram" href="instagram.com"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"></a><a href="#"><i class="icon ion-social-youtube" href="youtube.com"></i></a></div><!-- End: Social Icons --><!-- Start: Copyright --><p class="copyright">BKLEEN © 2021</p><!-- End: Copyright --></footer><!-- End: Footer Basic --><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.4.8/swiper-bundle.min.js"></script><script src="/assets/js/script.min.js?h=74bfed4bb61d799170de7da4c1ad5495"></script></body></html>
