--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="/assets/img/WhatsApp%20Image%202021-07-28%20at%2015.59.31.jpeg?h=486e0f8da95ce1f63cf6ac601eafa972" alt="First slide" style="height: auto; width: auto;">
+      <img class="d-block w-100" src="/assets/img/1.jpeg?h=486e0f8da95ce1f63cf6ac601eafa972" alt="First slide" style="height: auto; width: auto;">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="/assets/img/WhatsApp%20Image%202021-07-28%20at%2015.59.32.jpeg?h=ecd3cd3cea625885e003632b182274af" alt="Second slide" style="height: auto; width: auto;">        
+      <img class="d-block w-100" src="/assets/img/2.jpeg?h=ecd3cd3cea625885e003632b182274af" alt="Second slide" style="height: auto; width: auto;">        
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="/assets/img/WhatsApp%20Image%202021-07-28%20at%2015.59.32%20(1).jpeg?h=c3af6f6128e0eae18454eb0553764d95" alt="Third slide" style="height: auto; width: auto;">        
+      <img class="d-block w-100" src="/assets/img/3.jpeg?h=c3af6f6128e0eae18454eb0553764d95" alt="Third slide" style="height: auto; width: auto;">        
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
